Packages_2024/gweather_4.4.2/C-include/libgweather-4.0/libgweather/gweather-enum-types.h


/* This file is generated by glib-mkenums, do not modify it. This code is licensed under the same license as the containing project. Note that it links to GLib, so must comply with the LGPL linking clauses. */

#pragma once

#if !(defined(IN_GWEATHER_H) || defined(GWEATHER_COMPILATION))
#error "gweather-enum-types.h must not be included individually, include gweather.h instead"
#endif

#include <glib-object.h>
#include <libgweather/gweather-version.h>

G_BEGIN_DECLS

/* enumerations from "gweather-enums.h" */

_GWEATHER_EXTERN
GType gweather_temperature_unit_get_type (void) G_GNUC_CONST;
#define GWEATHER_TYPE_TEMPERATURE_UNIT (gweather_temperature_unit_get_type ())

_GWEATHER_EXTERN
GType gweather_speed_unit_get_type (void) G_GNUC_CONST;
#define GWEATHER_TYPE_SPEED_UNIT (gweather_speed_unit_get_type ())

_GWEATHER_EXTERN
GType gweather_pressure_unit_get_type (void) G_GNUC_CONST;
#define GWEATHER_TYPE_PRESSURE_UNIT (gweather_pressure_unit_get_type ())

_GWEATHER_EXTERN
GType gweather_distance_unit_get_type (void) G_GNUC_CONST;
#define GWEATHER_TYPE_DISTANCE_UNIT (gweather_distance_unit_get_type ())

_GWEATHER_EXTERN
GType gweather_format_options_get_type (void) G_GNUC_CONST;
#define GWEATHER_TYPE_FORMAT_OPTIONS (gweather_format_options_get_type ())

/* enumerations from "gweather-info.h" */

_GWEATHER_EXTERN
GType gweather_provider_get_type (void) G_GNUC_CONST;
#define GWEATHER_TYPE_PROVIDER (gweather_provider_get_type ())

_GWEATHER_EXTERN
GType gweather_wind_direction_get_type (void) G_GNUC_CONST;
#define GWEATHER_TYPE_WIND_DIRECTION (gweather_wind_direction_get_type ())

_GWEATHER_EXTERN
GType gweather_sky_get_type (void) G_GNUC_CONST;
#define GWEATHER_TYPE_SKY (gweather_sky_get_type ())

_GWEATHER_EXTERN
GType gweather_phenomenon_get_type (void) G_GNUC_CONST;
#define GWEATHER_TYPE_PHENOMENON (gweather_phenomenon_get_type ())

_GWEATHER_EXTERN
GType gweather_qualifier_get_type (void) G_GNUC_CONST;
#define GWEATHER_TYPE_QUALIFIER (gweather_qualifier_get_type ())

/* enumerations from "gweather-location.h" */

_GWEATHER_EXTERN
GType gweather_location_level_get_type (void) G_GNUC_CONST;
#define GWEATHER_TYPE_LOCATION_LEVEL (gweather_location_level_get_type ())

G_END_DECLS

/* Generated data ends here */